@@ -1,16 +1,19 @@
 package scenario;
 
+import logger.Logger;
 import shell.manager.IManager;
 import utils.TestScenarioFactory;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 
 public class TestRunner {
+
+    private static final Logger logger = Logger.getInstance();
+
     private String TestFileName;
     public List<String> testScenarios;
 
@@ -22,18 +25,18 @@ public class TestRunner {
 
     public void readTestScriptFile() {
 
-        Path path = Paths.get(TestFileName);
+        Path path = Path.of(TestFileName);
 
         try {
             if (!Files.exists(path)) {
-                System.out.println("file 없음");
+                logger.printConsoleAndLog("TestRunner.readTestScriptFile()", TestFileName + " File not found");
                 return;
             }
             testScenarios = Files.readAllLines(path, StandardCharsets.UTF_8);
 
         } catch (Exception e) {
-            //To-do
-            System.out.println("오류");
+            logger.printConsoleAndLog("TestRunner.readTestScriptFile()", TestFileName + " File read Error");
+
         }
     }
 
@@ -42,13 +45,18 @@ public class TestRunner {
         readTestScriptFile();
 
         for (String scnario : testScenarios) {
-            // Test Scenario
+
             ITestScenario testScenario = TestScenarioFactory.getTestScenario(scnario, manager);
             if (testScenario != null) {
+                logger.printConsoleAndLog("TestRunner.process()", scnario + " RUN");
                 System.out.print(scnario + " --- RUN...");
+
                 String result = testScenario.run() ? "PASS" : "FAIL";
                 System.out.println(result);
+                logger.printConsoleAndLog("TestRunner.process()", scnario + " RESULT : " + result);
 
+            } else {
+                logger.printConsoleAndLog("TestRunner.process()", scnario + " not Found");
             }
         }
     }
